feat(log-viewer): 新增多项日志查看器功能命令
- 新增刷新日志文件命令，支持重新加载当前日志
- 添加导出当前日志命令，提示用户在界面操作导出
- 实现显示日志统计命令，通过消息请求统计信息
- 支持书签管理，切换书签视图功能
- 支持注释管理，切换注释视图功能
- 添加跳转到行号命令，支持用户输入行号跳转
- 增加高级搜索命令，显示高级搜索界面
- 在webview中新增对书签、注释、高级搜索命令的响应处理
- 在package.json中注册上述所有命令及其激活事件

--- a/src/webview.html
+++ b/src/webview.html
@@ -1360,6 +1360,15 @@
                 case 'jumpToLineInFullLogResult':
                     handleJumpToLineInFullLogResult(message.data);
                     break;
+                case 'toggleBookmarks':
+                    showBookmarksModal();
+                    break;
+                case 'toggleComments':
+                    showCommentsModal();
+                    break;
+                case 'showAdvancedSearch':
+                    showAdvancedSearchModal();
+                    break;
             }
         });
         
