新增多关键词搜索功能，支持通过空格分隔的多个关键词进行 AND 逻辑匹配，并在搜索框中添加相应选项；更新相关文档以反映新特性，优化搜索逻辑以提升用户体验。

--- a/src/webview.html
+++ b/src/webview.html
@@ -24,6 +24,10 @@
                 <span>正则</span>
             </label>
             <label style="font-size: 12px; display: flex; align-items: center; gap: 5px;">
+                <input type="checkbox" id="multipleMode">
+                <span>多关键词</span>
+            </label>
+            <label style="font-size: 12px; display: flex; align-items: center; gap: 5px;">
                 <input type="checkbox" id="reverseMode">
                 <span>反向搜索</span>
             </label>
